[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gra/obj/H_moving_platform_sign2.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/objects/moving_platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64.6866, 2.29346 )

[node name="moving_platform" type="KinematicBody2D" groups=[
"moving_platform",
]]
collision_layer = 8
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7, 56 )
scale = Vector2( 2, 2.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 32 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
